--- a/BlazorWebAssembly/BlazorWebAssembly.csproj
+++ b/BlazorWebAssembly/BlazorWebAssembly.csproj
@@ -1,18 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <BaseIntermediateOutputPath>$(SolutionDir)BlazorWebAssembly\obj</BaseIntermediateOutputPath>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<BaseIntermediateOutputPath>$(SolutionDir)BlazorWebAssembly\obj</BaseIntermediateOutputPath>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-rc.1.21452.15" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-rc.1.21452.15" PrivateAssets="all" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-rc.1.21452.15" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-rc.1.21452.15" PrivateAssets="all" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Models\" />
+	</ItemGroup>
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="xcopy &quot;$(SolutionDir)BlazorWebAssembly\$(OutDir)BlazorWebAssembly.dll&quot; &quot;$(SolutionDir)BlazorWebAssembly\obj\$(IntDir)\Debug\net6.0\browser-wasm\&quot; /Y /I /E" />
+		<Exec Command="xcopy &quot;$(SolutionDir)BlazorWebAssembly\$(OutDir)BlazorWebAssembly.pdb&quot; &quot;$(SolutionDir)BlazorWebAssembly\obj\$(IntDir)\Debug\net6.0\browser-wasm\&quot; /Y /I /E" />
+	</Target>
 </Project>
